styles.css
:root {
  --bg: #1a1a1a;
  --fg: #dddddd;
  --accent1: #d7fbe8;
  --accent2: #9df3c4;
  --accent3: #62d2a2;
  --accent3: #1fab89;
  --gray: #565656;
}

* {
  font-family: monospace;
  background: var(--bg);
  color: var(--fg);
}

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
}

main {
  padding: 1ch 0 0 1ch;
  max-width: 80ch;
  display: inline-block;
}

p, span {
  margin: 0;
}

h1, h2, h3, h4 {
  font-size: 1rem;
  padding: 0;
  margin: 0;
  font-weight: normal;
}

h1 { color: var(--accent1); }
h2 { color: var(--accent2); }
h3 { color: var(--accent3); }
h4 { color: var(--accent4); }

h1::before { content: "# "; }
h2::before { content: "## "; }
h3::before { content: "### "; }
h4::before { content: "#### "; }

ol, ul {
  padding: 0;
  margin: 0;
  list-style: none;
}

li:before {
  content: "* ";
  color: var(--gray);
}

code {
  color: var(--bg);
  background: var(--fg);
  padding: 0.5ch;
}

blockquote {
  border-left: 0.5ch solid var(--gray);
  padding: 1ch 1ch 1ch 1.5ch;
  margin: 0;
  font-style: italic;
}

.gray {
  color: var(--gray);
}

input[type="checkbox"] {
  pointer-events: none;
  width: 2ch;
  margin: 0 1ch 0 0;
}

.tag:before { content: "["; }
.tag:after { content: "]"; }

